service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-nginx
  namespace: kube-basic
spec:
  selector:
    app: app-nginx
  type: NodePort
  ports:
  - name: app-nginx
    protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 0
---
apiVersion: v1
kind: Service
metadata:
  name: sample-web
  namespace: kube-basic
spec:
  selector:
    app: sample-web
  type: ClusterIP
  ports:
  - name: sample-web
    protocol: TCP
    port: 8080
    targetPort: 80
