ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress 
metadata: 
  name: ingress-test
  namespace: kube-basic
  annotations: 
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 67a4a763-72c0-44b1-8849-da8145c80178
    kubernetes.io/elb.port: "80"
spec:
  rules: 
  - host: 'kube-basic.lessex.company'
    http: 
      paths: 
      - path: '/'
        backend: 
          serviceName: app-nginx
          servicePort: 80
        property:
          ingress.beta.kubernetes.io/url-match-mode: STARTS_WITH
